# littlerisc

./: .gitignore  CMakeLists.txt  README.md  main.c
helloworld/: Makefile  boot.s  littlerisc.ld  main.c
littlerisc/: core.c  core.h  csr.c  csr.h  mmu.c  mmu.h
littlerisc/include/: littlerisc.h
test/: csr_test.c  mmu_test.c  register_test.c  rv32i_test.c
